--- a/src/html/cadastro.html
+++ b/src/html/cadastro.html
@@ -5,20 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/cadastro.css">
-    <script src="../js/cadastro.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Cadastro</title>
 </head>
 
 <body>
-    <header>
-        <a class="headerBotao" href="../index.html">LOGO</a>
-        <nav>
-            <a class="headerBotao" href="./login.html">Login</a>
-            <a class="headerBotao" href="./detalhes.html">Detalhes</a>
-        </nav>
-    </header>
+
+    <header id="header-cadastro"></header>
 
     <main>
         <h1>Página de cadastro</h1>
@@ -76,15 +69,8 @@
         </form>
     </main>
 
-    <!-- Rodape com imagens de paginas de redes sociais -->
-    <footer>
-        <p>Todos os direitos reservados.</p>
-        <div class="blocoFooter">
-            <img class="imagemFooter" src="../img/logotipo-do-instagram.png" alt="logoInstagram" />
-            <img class="imagemFooter" src="../img/facebook.png" alt="logoFace" />
-            <img class="imagemFooter" src="../img/whatsapp.png" alt="logoWhats" />
-        </div>
-    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="./src/js/view/script.js"></script>
 </body>
 
 </html>
