--- a/src/html/login.html
+++ b/src/html/login.html
@@ -6,19 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Some Enterprise</title>
+    <title>Login</title>
 </head>
 
 <body>
-    <header id="header-index"></header>
+
+    <header id="header-login"></header>
 
     <main>
-        <p>Página de boas vindas</p>
-        <p>Para todos os assinantes e não assinantes</p>
+        <p>Página pra fazer o login</p>
+        
+        <a href="./incial.html">Fazer login</a>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="./src/js/view/script.js"></script>
+    <script src="../js/view/script.js"></script>
 </body>
 
 </html>
